Cacti CHANGELOG

0.8.7a
-bug#0001067: Fixed extra spaces in GPRINT. Better Alignment for Autopadding
-bug#0001038: Data sources in RRAs have random order, messing up predefined CDEFs
-bug#0001043: Graph Templates drop down populates with duplicates
-bug#0001046: Upgrade from 0.8.6j to 0.8.7 defaults to Authentication Method NONE
-bug#0001055: Invalid date format - "half hour" not the GNU Date format
-bug#0001058: Graph Filter dropdowns do not respect user graph permissions
-bug#0001060: RRDtool 1.2.15 complain for garbage characters when rrdtool_function_xport is used
-bug#0001061: cmd.php: potential call to invalid "availability_method" key on wrong hash
-bug#0001064: Log file viewer inefficient filtering uses excess memory
-bug#0001059: Potential SQL injection vulnerability
-bug#0001070: Cron interval detection causes multiple pollers to run
-feature#0001065: Move to Top for List and Tree View. Omit boring scrolling

0.8.7
-bug#0000480: Fix error after altering graphs displayed per page
-bug#0000740: Add support for setting the PHP session name of Cacti
-bug#0000829: Add support for an specifying an uptime OID for SNMP queries
-bug#0000830: Add filtering graphs by Graph Template
-bug#0000833: Add favicon.ico support
-bug#0000850: Add Select All for graph list view
-bug#0000854: Move "Downed Host Detection" into the device edit screen
-bug#0000873: Fix issues with the poller hanging in certain situations
-bug#0000876: Add ability to search for host with a not UP status
-bug#0000898: Selecting a CUSTOM timespan and then CLEARing yields "LAST HALF HOUR" preset
-bug#0000899: Add local checking to the Paths tab on the Settings page
-bug#0000902: Fix issues with cmd.php and PHP 4.4.1 under windows
-bug#0000903: snmpgetnext function does not exist in PHP less than 5.0
-bug#0000904: Data Source creation fails without php-snmp
-bug#0000906: Every tenth host does not show on tree during console edit